@@ -478,13 +478,13 @@ add_setshow_filename_cmd (char *name, enum command_class class,
    list for set/show or some sublist thereof).  */
 void
 add_setshow_string_cmd (char *name, enum command_class class,
-			  char **var,
-			  const char *set_doc, const char *show_doc,
-			  const char *help_doc,
-			  cmd_sfunc_ftype *set_func,
-			  show_value_ftype *show_func,
-			  struct cmd_list_element **set_list,
-			  struct cmd_list_element **show_list)
+			char **var,
+			const char *set_doc, const char *show_doc,
+			const char *help_doc,
+			cmd_sfunc_ftype *set_func,
+			show_value_ftype *show_func,
+			struct cmd_list_element **set_list,
+			struct cmd_list_element **show_list)
 {
   add_setshow_cmd_full (name, class, var_string, var,
 			set_doc, show_doc, help_doc,
@@ -538,12 +538,12 @@ add_setshow_optional_filename_cmd (char *name, enum command_class class,
 void
 add_setshow_integer_cmd (char *name, enum command_class class,
 			 int *var,
-			  const char *set_doc, const char *show_doc,
-			  const char *help_doc,
-			  cmd_sfunc_ftype *set_func,
-			  show_value_ftype *show_func,
-			  struct cmd_list_element **set_list,
-			  struct cmd_list_element **show_list)
+			 const char *set_doc, const char *show_doc,
+			 const char *help_doc,
+			 cmd_sfunc_ftype *set_func,
+			 show_value_ftype *show_func,
+			 struct cmd_list_element **set_list,
+			 struct cmd_list_element **show_list)
 {
   add_setshow_cmd_full (name, class, var_integer, var,
 			set_doc, show_doc, help_doc,
