@@ -1,5 +1,8 @@
 2005-12-06  Michael Snyder  <msnyder@redhat.com>
 
+	* cli/cli-decode.c (add_setshow_string_cmd): Indent.
+	(add_setshow_integer_cmd): Indent.
+
 	* inf-ptrace.c: Fix typos in comments.
 
 2005-12-06  Serge Chatroux  <serge.chatroux@st.com>
